Java11 - integration test EAP configurations
Make integration tests work with Java 11.